Jann 30/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>FunctionalCurrencyNameFC__c</fullName>
        <formula>Functional_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Currency Name (FC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The three-character abbreviation for the functional currency in which the request amount will be denominated.</inlineHelpText>
        <label>Functional Currency (FC) *</label>
        <referenceTo>ARE_RFA__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Group Circulation stage</inlineHelpText>
        <label>Group Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>3. Group</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>ProfitCenterNumber__r.GroupName__c</formula>
        <inlineHelpText>A business operating unit in a specified part of the world or a specific business segment. The current Groups are N. America; L. America; Africa, Eurasia; Europe; Pacific; Corporate; and Bottling Invest. Select Group accountable for transaction.</inlineHelpText>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRR__c</fullName>
        <inlineHelpText>Internal Rate of Return is the expected growth rate.</inlineHelpText>
        <label>IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IncludeInCapitalReports__c</fullName>
        <inlineHelpText>Field available to Corporate Capital Management for annual capital reporting  purposes.</inlineHelpText>
        <label>Include In Capital Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InitialBudgetYear__c</fullName>
        <inlineHelpText>The year the capital project is expected to begin spending.</inlineHelpText>
        <label>Initial Budget Year *</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsthisanAnnualCapitalPlanrequest__c</fullName>
        <inlineHelpText>Used by Corporate Capital Management to flag annual capital plan requests for reporting purposes.</inlineHelpText>
        <label>Is this an Annual Capital Plan request?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KeyOperation__c</fullName>
        <formula>ProfitCenterNumber__r.KeyOperationName__c</formula>
        <label>Key Operation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyOperationsApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Key Operations Circulation stage</inlineHelpText>
        <label>Key Operations Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>1. Key Operations</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCOACategorySubCategory__c</fullName>
        <inlineHelpText>The Local Chart of Authority (LCOA) category as determined by the BU/Group/Function.  This field is used in addition to the DOA categories or in rare cases when the DOA category does not apply.</inlineHelpText>
        <label>LCOA Category / Sub Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOC_Name__c</fullName>
        <label>LOC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LevelStageCopy__c</fullName>
        <label>LevelStageCopy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LevelStage__c</fullName>
        <inlineHelpText>Automatically assigned by the RFA database based upon the stage of the RFA approval.</inlineHelpText>
        <label>Level / Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>Hierarchy levels assigned as RFA Coordinators move RFAs to sets of approvers based upon DOA/LCOA approval levels.</inlineHelpText>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Management Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Board Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return To Sender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LocalReferenceNumber__c</fullName>
        <inlineHelpText>A reference number used by the originating location to track the request. It is recommended that the local reference number start with the two-digit year followed by a sequential number.  For example,  11/05 represents the 5th RFA submitted in 2011.</inlineHelpText>
        <label>Local Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPVUSD__c</fullName>
        <inlineHelpText>Net present value.</inlineHelpText>
        <label>NPV (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofUnitsofEquipment__c</fullName>
        <inlineHelpText>The number of units covered in the CAPPrs agreement.</inlineHelpText>
        <label>Number of Units of Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectiveRationale__c</fullName>
        <label>Objective/Rationale/Background  *</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>POC_Name__c</fullName>
        <label>POC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Total__c</fullName>
        <description>Counts all POC in an RFA</description>
        <label>POC Total</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Primary Point of Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PerformanceReportingPeriodMonths__c</fullName>
        <inlineHelpText>The number of performance months covered by the CAPPrs agreement.</inlineHelpText>
        <label>Performance Reporting Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Category_Guidelines__c</fullName>
        <description>Policy Category Guidelines</description>
        <inlineHelpText>Policy Category Guidelines</inlineHelpText>
        <label>Policy Category Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Category__c</fullName>
        <label>Policy Category*</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 - Introduction to Finance Manuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 - Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3 - Common Innovation Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 - Internal Controls Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 - Delegation of Authority &amp; Related Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 - Section 404 Internal Controls Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 - Segretation of Duties, Risk Management &amp; Violation Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 - Audit &amp; Non-Audit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.6 - Certification &amp; Representation Letters Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7 - Outsourcing Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8 - Government Payment &amp; Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9 - US Foreign Trade Controls &amp; Anti-Boycott Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.10 - Postmix Revenue Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.11 - Financial Confirmations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 - General Ledger &amp; Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 - Information Access/Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 - Economic Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 - Income Statement Variance Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 - Statement of Cash Flows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 - Beverage Partners Worldwide (BPW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 - Consolidated Affiliate and Administrative Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 - Entity Creation, Liquidation &amp; Headquarters Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 - Annual Clearing Entries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 - Procurement, Purchasing &amp; Payables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 - Unclaimed Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 - Cash Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 - Debt &amp; Equity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 - Employee Retirement Plan Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 - Currency Remeasurement &amp; Translation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 - Currency Hedging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Excerpt__c</fullName>
        <description>Portion of Policy from exemption</description>
        <inlineHelpText>Copy and paste the particular portion of the policy from which you are seeking exemption</inlineHelpText>
        <label>Policy Excerpt*</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Group_Name__c</fullName>
        <label>Group*</label>
        <picklist>
            <picklistValues>
                <fullName>Bottling Investments</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Products Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eurasia and Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreviousLevel__c</fullName>
        <description>Preserves the Stage value when the RFA is put into &quot;Return to Sender&quot;, &quot;Capital Management Hold&quot; or &quot;Pending Board Review&quot; stage</description>
        <label>Previous Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryDOACategorySubCategory__c</fullName>
        <inlineHelpText>This field allows the RFA Creator to select up to 3  DOA Categories that apply to the requested transaction.</inlineHelpText>
        <label>Primary DOA Category / Sub Category *</label>
        <picklist>
            <picklistValues>
                <fullName>1.A.1	Capital Expenditures - Annual Capital Plan Request or Formal Approval of Annual Capital Plan Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.a	Capital Expenditures - Unbudgeted CPR or SPR Covered by Budget Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.b	Capital Expenditures - Unbudgeted CPR or SPR Funded Partially or Fully from Corporate Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.3	Capital Expenditures - Increase or Scope Change to Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.4	Capital Expenditures - Transfer of Capital Budget across Groups for a Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.5	Capital Expenditures - Foreign Exchange Fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.8	Capital Expenditures - Advance Appropriations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.B	Capital Expenditures - Capability and Performance Programs (CAPPrs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.C	Capital Expenditures - Bottles and Cases, Including Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.	IT Investments and Website Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.A	Real Property -  Acquisitions and Sales or Other Disposals of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.B	Real Property -  Donations of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.C	Real Property - Condemnations or Easements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.A	Leases - Operating Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.B	Leases - Capital Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.A	Inventory Adjustments and Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.B	Other Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.C	Asset Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.D	Asset Disposals (Tangible Assets excluding Real Property and Inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.A	Treasury - Banking Information Reports (BIR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.B	Treasury - External Borrowings and Lines of Credit (RFFs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.C	Treasury - Intercompany Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.D	Treasury - Loans Third Parties (Including CCFC Target Loan Programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.1	Treasury - Guarantees to Third Parties - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.2	Treasury - Guarantees Related to Tax Disputes or Other Matters Involving Governmental Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.F	Treasury - Comfort Letters and Other Financial Security Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.G	Treasury - Accommodation Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.H	Treasury - Credit Terms/Policies or Incentives for Sales to Customers, Bottlers or Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.1	Treasury - Exemption from Bad Debt Reserve Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.2	Treasury - Write-offs of Uncollectible Accounts Receivable from Bad Debt Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryReportingUnitName__c</fullName>
        <formula>PrimaryReportingUnitNumber__r.Reporting_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically assigned based on the reporting unit # selected.</inlineHelpText>
        <label>Primary Reporting Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryReportingUnitNumberName__c</fullName>
        <formula>PrimaryReportingUnitNumber__r.Name + &quot; - &quot; +  PrimaryReportingUnitNumber__r.Reporting_Unit_Name__c</formula>
        <label>Primary Reporting Unit Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryReportingUnitNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reporting Unit (RU) is the same as Co. Code and is either a legal entity or an acctg location.  RU is a four-digit code with an “RU” prefix in this system (e.g. RU0101 – North America).  Select the RU(s) recording the transaction.</inlineHelpText>
        <label>Primary Reporting Unit #</label>
        <referenceTo>ReportingUnit__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfitCenterMinLevel__c</fullName>
        <formula>TEXT(ProfitCenterNumber__r.MinLevel__c)</formula>
        <label>Profit Center Min Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterName__c</fullName>
        <formula>ProfitCenterNumber__r.ProfitCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically assigned based on profit center number selected.</inlineHelpText>
        <label>Profit Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterNumberName__c</fullName>
        <formula>ProfitCenterNumber__r.Name  + &quot; - &quot; +  ProfitCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Center Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An org. unit designated as a separate entity for revenue generation and cost collection. Profit centers (PC) listed depend on the Group selected. Select the PC primarily responsible for the transaction. RFA coordinators are assigned by PC.</inlineHelpText>
        <label>Profit Center Number</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REP_DaysInBUCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Business Unit Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Business Unit Circulation&apos;),
IF(
ISBLANK( TECH_TimeInBUCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInBUCirculation__c/(1000*60*60*24))+(NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInBUCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Business Unit Circulation</inlineHelpText>
        <label>Days In Business Unit Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInBUPostCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Business Unit Post-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Business Unit Post-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInBUPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInBUPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInBUPostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Business Unit Post-Circulation</inlineHelpText>
        <label>Days In Business Unit Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInBUPreCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Business Unit Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Business Unit Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInBUPreCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInBUPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInBUPreCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Business Unit Pre-Circulation</inlineHelpText>
        <label>Days In Business Unit Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInCapMgmtHold__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Capital Management Hold</description>
        <formula>IF( 
(LevelStage__c = &apos;Capital Management Hold&apos;),
IF(
ISBLANK( TECH_TimeInCapMgmtHold__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCapMgmtHold__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCapMgmtHold__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Capital Management Hold</inlineHelpText>
        <label>Days In Capital Management Hold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInCorporateCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Corporate Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Corporate Circulation&apos;),
IF(
ISBLANK( TECH_TimeInCorporateCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCorporateCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCorporateCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Corporate Circulation</inlineHelpText>
        <label>Days In Corporate Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInCorporatePostCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Corporate Post-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Corporate Post-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInCorporatePostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCorporatePostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCorporatePostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Corporate Post-Circulation</inlineHelpText>
        <label>Days In Corporate Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInCorporatePreCirculation__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Corporate Pre-Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Corporate Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInCorporatePreCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCorporatePreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCorporatePreCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Corporate Pre-Circulation</inlineHelpText>
        <label>Days In Corporate Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInDraft__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Draft</description>
        <formula>IF( 
(LevelStage__c = &apos;Draft&apos;),
(NOW()-CreatedDate),
(TECH_TimeInDraft__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Draft</inlineHelpText>
        <label>Days In Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInExecutiveCirculation__c</fullName>
        <formula>IF( 
(LevelStage__c = &apos;Executive Circulation&apos;),
IF(
ISBLANK( TECH_TimeInExecutiveCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInExecutiveCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInExecutiveCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Executive Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInExecutivePostCirculation__c</fullName>
        <formula>IF( 
(LevelStage__c = &apos;Executive Post-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInExecutivePostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInExecutivePostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInExecutivePostCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Executive Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInGroup__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Group Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Group Circulation&apos;),
IF(
ISBLANK( TECH_TimeInGroupCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInGroupCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInGroupCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Group Circulation</inlineHelpText>
        <label>Days In Group Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Circulation</description>
        <formula>IF( 
(LevelStage__c = &apos;Key Operations Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsCirculation__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Key Ops Circulation</inlineHelpText>
        <label>Days In Key Operations Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPendBoardReview__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Pending Board Review</description>
        <formula>IF( 
(LevelStage__c = &apos;Pending Board Review&apos;),
IF(
ISBLANK( TECH_TimeInPendBoardReview__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInPendBoardReview__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInPendBoardReview__c/ (1000*60*60*24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pending Board Review</inlineHelpText>
        <label>Days In Pending Board Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>